--- a/views/home.ejs
+++ b/views/home.ejs
@@ -217,25 +217,24 @@
                                 <div class="card mb-3 shadow-sm" style="max-width: 800px;">
                                     <div class="row g-0">
                                         <div class="col-md-6">
-                                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAxvcbe_N-jJCsDCbnE7o23yYlweyCYhRd3g&usqp=CAU"
-                                                class="img-fluid rounded-start" alt="..."
+                                            <img src="/Image/NewSimonSay.jpeg" class="img-fluid rounded-start" alt="..."
                                                 style=" height: 100%; width: 100%;">
                                         </div>
                                         <div class="col-md-6">
                                             <div class="card-body mt-4">
-                                                <a href="https://github.com/Fardeen26/WordMeaning-App" target="_blank" class="project-links">
+                                                <a href="https://github.com/Fardeen26/Simon-Says-Game" target="_blank" class="project-links">
                                                 <h5 class="card-title project-card-title"><b
-                                                        style="font-weight: 500;">WordMeaning App</b> <a
-                                                        href="https://github.com/Fardeen26/WordMeaning-App"><i
-                                                            class="fa-solid fa-arrow-up-right-from-square git-links"
-                                                            style="font-size: .8rem;"></i></a></h5></a>
-                                                <p class="card-text project-card-text mt-3">A Streamlined UI for instant word definitions. Harnessing APIs for rapid, precise responses, the project ensures an effortless exploration of words.</p>
+                                                        style="font-weight: 500;">Simon
+                                                        Says Game</b> <a
+                                                        href="https://github.com/Fardeen26/Simon-Says-Game">
+                                                        <i class="fa-solid fa-arrow-up-right-from-square git-links"
+                                                            style="font-size: .8rem;"></i></a></h5>
+                                                </i></a></h5></a>
+                                                <p class="card-text project-card-text mt-3">Engage in the classic Simon Says experience with a captivating UI and immersive background audio. Test your memory, follow the sequence, and enjoy the game! 🎮</p>
                                                 <div class="project-tech display-flex">
                                                     <p>HTML</p>
                                                     <p class="margin-l-10">CSS</p>
                                                     <p class="margin-l-10">JavaScript</p>
-                                                    <p class="margin-l-10">Bootstrap</p>
-                                                    <p class="margin-l-10">API</p>
                                                 </div>
 
                                             </div>
@@ -251,7 +250,7 @@
                                     style="max-width: 800px; background-color: rgba(212, 218, 255, 0.1); color: #fff;">
                                     <div class="row g-0">
                                         <div class="col-md-6">
-                                            <img src="/Image/NewSpotify.png" class="img-fluid rounded-start" alt="..."
+                                            <img src="/Image/spotifybanner.jpeg" class="img-fluid rounded-start" alt="..."
                                                 style=" height: 100%; width: 100%;">
                                         </div>
                                         <div class="col-md-6">
@@ -278,28 +277,28 @@
                             </div>
                             <div class="col-lg-6 col-md-12 col-xs-12">
 
-                                <div class="card mb-3 shadow-sm"
-                                    style="max-width: 800px; background-color: rgba(212, 218, 255, 0.1); color: #fff;">
+                                <div class="card mb-3 shadow-sm" style="max-width: 800px;">
                                     <div class="row g-0">
                                         <div class="col-md-6">
-                                            <img src="/Image/spotifypagespr.png" class="img-fluid rounded-start"
-                                                alt="..." style=" height: 100%; width: 100%;">
+                                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAxvcbe_N-jJCsDCbnE7o23yYlweyCYhRd3g&usqp=CAU"
+                                                class="img-fluid rounded-start" alt="..."
+                                                style=" height: 100%; width: 100%;">
                                         </div>
                                         <div class="col-md-6">
                                             <div class="card-body mt-4">
-                                                <a href="https://github.com/Fardeen26/Sportify-Pages-Clone" target="_blank" class="project-links">
+                                                <a href="https://github.com/Fardeen26/WordMeaning-App" target="_blank" class="project-links">
                                                 <h5 class="card-title project-card-title"><b
-                                                        style="font-weight: 500;">Spotify
-                                                        Pages</b> <a
-                                                        href="https://github.com/Fardeen26/Sportify-Pages-Clone">
-                                                        <i class="fa-solid fa-arrow-up-right-from-square git-links"
+                                                        style="font-weight: 500;">WordMeaning App</b> <a
+                                                        href="https://github.com/Fardeen26/WordMeaning-App"><i
+                                                            class="fa-solid fa-arrow-up-right-from-square git-links"
                                                             style="font-size: .8rem;"></i></a></h5></a>
-                                               
-                                                <p class="card-text project-card-text mt-3">
-                                                    This clone brilliantly showcases Spotify's features and plans with 6 Spotify Introduction pages, offering a visual journey into the renowned music streaming platform.! 🎵✨</p>
+                                                <p class="card-text project-card-text mt-3">A Streamlined UI for instant word definitions. Harnessing APIs for rapid, precise responses, the project ensures an effortless exploration of words.</p>
                                                 <div class="project-tech display-flex">
                                                     <p>HTML</p>
                                                     <p class="margin-l-10">CSS</p>
+                                                    <p class="margin-l-10">JavaScript</p>
+                                                    <p class="margin-l-10">Bootstrap</p>
+                                                    <p class="margin-l-10">API</p>
                                                 </div>
 
                                             </div>
@@ -345,26 +344,26 @@
                                 <div class="card mb-3 shadow-sm" style="max-width: 800px;">
                                     <div class="row g-0">
                                         <div class="col-md-6">
-                                            <img src="/Image/NewSimonSay.jpeg" class="img-fluid rounded-start" alt="..."
+                                            <img src="/Image/amazonpr.png" class="img-fluid rounded-start" alt="..."
                                                 style=" height: 100%; width: 100%;">
                                         </div>
                                         <div class="col-md-6">
                                             <div class="card-body mt-4">
-                                                <a href="https://github.com/Fardeen26/Simon-Says-Game" target="_blank" class="project-links">
-                                                <h5 class="card-title project-card-title"><b
-                                                        style="font-weight: 500;">Simon
-                                                        Says Game</b> <a
-                                                        href="https://github.com/Fardeen26/Simon-Says-Game">
-                                                        <i class="fa-solid fa-arrow-up-right-from-square git-links"
-                                                            style="font-size: .8rem;"></i></a></h5>
-                                                </i></a></h5></a>
-                                                <p class="card-text project-card-text mt-3">Engage in the classic Simon Says experience with a captivating UI and immersive background audio. Test your memory, follow the sequence, and enjoy the game! 🎮</p>
-                                                <div class="project-tech display-flex">
+                                                <a href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone" target="_blank" class="project-links">
+                                                    <h5 class="card-title project-card-title"><b
+                                                            style="font-weight: 500;">Amazon
+                                                            Web Clone <a
+                                                                href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone">
+                                                                <i
+                                                                    class="fa-solid fa-arrow-up-right-from-square git-links"></i></a>
+                                                    </h5>
+                                                    </i>
+                                                </b></h5></a>
+                                                <p class="card-text project-card-text mt-3">It is a meticulously crafted Amazon Clone. Though light on functionalities, its design mirrors the original Amazon website, offering an immersive visual experience! 🌐</p>
+                                                <div class="project-tech">
                                                     <p>HTML</p>
                                                     <p class="margin-l-10">CSS</p>
-                                                    <p class="margin-l-10">JavaScript</p>
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
@@ -404,29 +403,30 @@
                             </div>
                             <div class="col-lg-6 col-md-12 col-xs-12">
 
-                                <div class="card mb-3 shadow-sm" style="max-width: 800px;">
+                                <div class="card mb-3 shadow-sm"
+                                    style="max-width: 800px; background-color: rgba(212, 218, 255, 0.1); color: #fff;">
                                     <div class="row g-0">
                                         <div class="col-md-6">
-                                            <img src="/Image/amazonpr.png" class="img-fluid rounded-start" alt="..."
-                                                style=" height: 100%; width: 100%;">
+                                            <img src="/Image/spotifypagespr.png" class="img-fluid rounded-start"
+                                                alt="..." style=" height: 100%; width: 100%;">
                                         </div>
                                         <div class="col-md-6">
                                             <div class="card-body mt-4">
-                                                <a href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone" target="_blank" class="project-links">
-                                                    <h5 class="card-title project-card-title"><b
-                                                            style="font-weight: 500;">Amazon
-                                                            Web Clone <a
-                                                                href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone">
-                                                                <i
-                                                                    class="fa-solid fa-arrow-up-right-from-square git-links"></i></a>
-                                                    </h5>
-                                                    </i>
-                                                </b></h5></a>
-                                                <p class="card-text project-card-text mt-3">It is a meticulously crafted Amazon Clone. Though light on functionalities, its design mirrors the original Amazon website, offering an immersive visual experience! 🌐</p>
-                                                <div class="project-tech">
+                                                <a href="https://github.com/Fardeen26/Sportify-Pages-Clone" target="_blank" class="project-links">
+                                                <h5 class="card-title project-card-title"><b
+                                                        style="font-weight: 500;">Spotify
+                                                        Pages</b> <a
+                                                        href="https://github.com/Fardeen26/Sportify-Pages-Clone">
+                                                        <i class="fa-solid fa-arrow-up-right-from-square git-links"
+                                                            style="font-size: .8rem;"></i></a></h5></a>
+                                               
+                                                <p class="card-text project-card-text mt-3">
+                                                    This clone brilliantly showcases Spotify's features and plans with 6 Spotify Introduction pages, offering a visual journey into the renowned music streaming platform.! 🎵✨</p>
+                                                <div class="project-tech display-flex">
                                                     <p>HTML</p>
                                                     <p class="margin-l-10">CSS</p>
                                                 </div>
+
                                             </div>
                                         </div>
                                     </div>
