--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,7 +64,7 @@
 
                 <section class="thirdSection" id="About-jump">
                     <div class="res-div">
-                        <span class="text-gray">---- Who am I</span>
+                        <span class="text-gray">---- Who am I ----</span>
                     </div>
                     <h1 class="res-h1 h3">About Me</h1>
 
@@ -101,7 +101,7 @@
                 <hr class="hr-2">
 
                 <section class="secondSection" id="Skills-jump">
-                    <span class="text-gray">---- Know about me</span>
+                    <span class="text-gray">---- What I know ----</span>
                     <h1 class="res-h1 h3">Skills & Tools</h1>
 
                     <div class="container-xl mt-5">
@@ -109,61 +109,61 @@
                             <div class="col-md-6">
                                 <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25"
                                     aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 90%">HTML</div>
+                                    <div class="progress-bar bg-primary" style="width: 90%; letter-spacing: 1px;">HTML</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Info example"
                                     aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary " style="width: 90%">CSS</div>
+                                    <div class="progress-bar bg-primary " style="width: 90%; letter-spacing: 1px;">CSS</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Warning example"
                                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 80%">BOOTSTRAP</div>
+                                    <div class="progress-bar bg-primary" style="width: 80%; letter-spacing: 1px;">BOOTSTRAP</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Danger example"
                                     aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 85%">JAVASCRIPT</div>
+                                    <div class="progress-bar bg-primary" style="width: 85%; letter-spacing: 1px;">JAVASCRIPT</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Danger example"
                                     aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 75%">TAILWINDL</div>
+                                    <div class="progress-bar bg-primary" style="width: 75%; letter-spacing: 1px;">TAILWINDL</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Danger example"
                                     aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 70%">REACT</div>
+                                    <div class="progress-bar bg-primary" style="width: 70%; letter-spacing: 1px;">REACT</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Danger example"
                                     aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 60%">GSOC</div>
+                                    <div class="progress-bar bg-primary" style="width: 60%; letter-spacing: 1px;">GSAP</div>
                                 </div>
                             </div>
                             <div class="col-md-6 res-mt">
                                 <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25"
                                     aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 80%">NODE.JS</div>
+                                    <div class="progress-bar bg-primary" style="width: 80%; letter-spacing: 1px;">NODE.JS</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Info example"
                                     aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 83%">EXPRESS</div>
+                                    <div class="progress-bar bg-primary" style="width: 83%; letter-spacing: 1px;">EXPRESS</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Warning example"
                                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 88%">MONGODB</div>
+                                    <div class="progress-bar bg-primary" style="width: 88%; letter-spacing: 1px;">MONGODB</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Danger example"
                                     aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 65%">MYSQL</div>
+                                    <div class="progress-bar bg-primary" style="width: 65%; letter-spacing: 1px;">MYSQL</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Danger example"
                                     aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 78%">GIT/GITHUB</div>
+                                    <div class="progress-bar bg-primary" style="width: 78%; letter-spacing: 1px;">GIT/GITHUB</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Danger example"
                                     aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 85%">C/C++ LANGUAGE</div>
+                                    <div class="progress-bar bg-primary" style="width: 85%; letter-spacing: 1px;">C/C++ LANGUAGE</div>
                                 </div>
                                 <div class="progress mt-3" role="progressbar" aria-label="Danger example"
                                     aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 30px">
-                                    <div class="progress-bar bg-primary" style="width: 91%">DATA STRUCTURE</div>
+                                    <div class="progress-bar bg-primary" style="width: 91%; letter-spacing: 1px;">DATA STRUCTURE</div>
                                 </div>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                 <hr class="hr-2">
 
                 <section class="project-section" id="Projects-jump">
-                    <span class="text-gray">---- What I made</span>
+                    <span class="text-gray">---- What I made ----</span>
                     <div class="project-title">
                         <h1 class="res-h1 h3">Projects</h1>
                     </div>
@@ -514,8 +514,8 @@
                         <a href="https://www.instagram.com/fardeen_mansuri26/" target="_blank">
                             <div class="logo-1 link-border"><i class="fa-brands fa-instagram fa-2x"></i></div>
                         </a>
-                        <a href="www.facebook.com" target="_blank" class="padding-lft-40">
-                            <div class="logo-2 logo-p link-border"><i class="fa-brands fa-facebook fa-2x"></i></div>
+                        <a href="https://auth.geeksforgeeks.org/user/fardeenmanxtyn" target="_blank" class="padding-lft-40">
+                            <div class="logo-2 logo-p link-border"><i class="fa-solid fa-code fa-2x"></i></div>
                         </a>
                         <a href="https://twitter.com/fardeen14693425" target="_blank" class="padding-lft-40">
                             <div class="logo-3 logo-p link-border"><i class="fa-brands fa-twitter fa-2x"></i></div>
