--- a/views/home.ejs
+++ b/views/home.ejs
@@ -513,7 +513,7 @@
                     </div>
 
                     <div class="links">
-                        <a href="https://www.linkedin.com/in/fardeenmansoori/" target="_blank" class="padding-lft-40">
+                        <a href="https://www.linkedin.com/in/fardeenmansoori/" target="_blank">
                             <div class="logo-5 logo-p link-border"><i class="fa-brands fa-linkedin fa-2x"></i></div>
                         </a>
                         
@@ -528,7 +528,7 @@
                             <div class="logo-4 logo-p link-border"><i class="fa-brands fa-github fa-2x"></i></div>
                         </a>
 
-                        <a href="https://www.instagram.com/fardeen_mansuri26/" target="_blank">
+                        <a href="https://www.instagram.com/fardeen_mansuri26/" target="_blank" class="padding-lft-40">
                             <div class="logo-1 link-border"><i class="fa-brands fa-instagram fa-2x"></i></div>
                         </a>
                     </div>
