--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-
+    <div style="display: flex; justify-content: center; width: 100vw;">
+        <p style="position: absolute; color: red; top: 0; font-size: 18px;">THIS PORTFOLIO IS NOT UP TO DATE</p>
+    </div>
     <% if(success && success.length) { %>
         <div class="alert alert-primary alert-dismissible fade show col-4 offset-4 z-index-5 position-fixed mt-2"
             role="alert">
@@ -97,7 +99,8 @@
                                             <b>data structures and algorithms</b>, utilizing the power of C++. This dual
                                             pursuit not only showcases my dedication to mastering the technical aspects
                                             of software engineering but also positions my strategically for the
-                                            challenges that lie ahead.</p>
+                                            challenges that lie ahead.
+                                        </p>
 
                                         <p class="card-text" id="about-card-text">
                                             My journey extends beyond the screen. While I immersed in the world of
@@ -228,10 +231,9 @@
                                                     class="project-links">
                                                     <h5 class="card-title project-card-title">
                                                         <b style="font-weight: 500;">WanderLust Booking App</b><a
-                                                                href="https://wanderlust-6cr5.onrender.com"
-                                                                target="_blank">
-                                                                <i
-                                                                    class="fa-solid fa-arrow-up-right-from-square git-links" style="font-size: .8rem;"></i></a>
+                                                            href="https://wanderlust-6cr5.onrender.com" target="_blank">
+                                                            <i class="fa-solid fa-arrow-up-right-from-square git-links"
+                                                                style="font-size: .8rem;"></i></a>
                                                     </h5>
                                                     </i>
                                                 </a></h5></a>
@@ -265,7 +267,8 @@
                                                         <b style="font-weight: 500;">SumZ Article Summarizer</b> <a
                                                             href="https://sumz-summarize.netlify.app/">
                                                             <i class="fa-solid fa-arrow-up-right-from-square git-links"
-                                                                style="font-size: .8rem;"></i></a></h5>
+                                                                style="font-size: .8rem;"></i></a>
+                                                    </h5>
                                                     </i>
                                                 </a></h5></a>
                                                 <p class="card-text project-card-text mt-3">An Open AI GPT-4 Powered
