fix: added redirect link to new portfolio

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 
 <body>
     <div style="display: flex; justify-content: center; width: 100vw;">
-        <p style="position: absolute; color: red; top: 0; font-size: 18px;">THIS PORTFOLIO IS NOT UP TO DATE</p>
+        <p style="position: absolute; color: red; top: 0; font-size: 18px;">This is Outdated! visit this <a href="https://fardeenmansoori.vercel.app/">New Portfolio</a> instead</p>
     </div>
     <% if(success && success.length) { %>
         <div class="alert alert-primary alert-dismissible fade show col-4 offset-4 z-index-5 position-fixed mt-2"
